# polar-codes

./: .gitignore  CMakeLists.txt  GaloisFieldPolynomial.cpp  GaloisFieldPolynomial.h  PolarCode.cpp  PolarCode.h  README.md  build_constraight_matrix.cpp  decode.cpp  encode.cpp  main.cpp  makefile  matrix1.txt  out.txt  out1.txt  out2.txt  out3.txt  output.txt  util.cpp  word_error_rate.cpp
optimizer/: README.md  input.txt  input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input2.txt  input3.txt  input4.txt  input5.txt  input5b.txt  input5c.txt  input6.txt  input6b.txt  input7.txt  input8.txt  input9.txt  libCalcPoltirevBound.ctf  optimizer.cpp  output.txt
results/: graph1024.txt  graph1024ap.txt  graph1024mod.txt  graph1024sub.txt  graph1024submod.txt  graph1024thesis.txt  graph2048.txt  graph2048ap.txt  graph2048sub.txt  graph2048thesis.txt  graph64.txt  graph64ap.txt  graph64sub.txt  graph64thesis.txt  graph64thesis1.txt  graph64thesis2.txt  graph64thesis3.txt  graphs.txt  output.txt  plot_comp  plot_comp_1024  plot_comp_1024_thesis  plot_comp_2048  plot_comp_2048_thesis  plot_comp_64  plot_comp_64_thesis  plot_comp_64_thesis1  plot_comp_64_thesis2  plot_comp_64_thesis3  plot_sc  plot_script  plot_script_1024ap  plot_script_1024sub  plot_script_1024submod  plot_script_2048ap  plot_script_2048sub  results.txt  tmp.txt
simulation/: GaloisFieldPolynomial.cpp  GaloisFieldPolynomial.h  PolarCode.cpp  PolarCode.h  README.md  build_constraight_matrix.cpp  decode.cpp  encode.cpp  main.cpp  makefile  tmp.txt  word_error_rate.cpp
